# binance-data-collector

./: .dockerignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
binance_data_collector/: __main__.py  cli.py  collectors.py  common.py  compressors.py  currency_pair.py  file.py  json_formatter.py  log.py  rxpy.py  test.py  websockets.py
binance_data_collector/api/: __init__.py  application.py  config.py  constants.py  controller.py  core.py  exceptions.py  http.py  injectable.py  injection.py  lifecycle.py  module.py  pipes.py  route.py  types.py
binance_data_collector/app/: app_controller.py  app_module.py  app_service.py  constants.py  utils.py
binance_data_collector/app/dto/: currency_pair_change_response_dto.py  currency_pair_response_dto.py  currency_pairs_query_dto.py  health_reponse_dto.py  info_response_dto.py
binance_data_collector/app/helpers/: currency_pair_manager.py  data_collector.py  data_file_manager.py  web_socket_manager.py
binance_data_collector/app/models/: currency_pair.py  currency_pair_change.py  file_mock_repository.py  repository.py
binance_data_collector/cli/: __init__.py  cli.py  constants.py
binance_data_collector/config/: config.yaml
binance_data_collector/environments/: __init__.py  environment.py
binance_data_collector/log/: __init__.py  json_formatter.py
binance_data_collector/serialization/: __init__.py  core.py  decorators.py  formatters.py
binance_data_collector_old/: cli.py  collectors.py  data_file_manager.py  exit_handler.py  websockets.py
docker/: configs.json  supervisord.conf
docker/supervisor/: apps.sv.conf
