[metadata]
name = binance_data_collector
version = file:VERSION
author = Márton Torner
author_email = torner.marton@gmail.com
description = Test python package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tornermarton/binance-data-collector
project_urls =
    Documentation=https://github.com/tornermarton/binance-data-collector/docs
    Bug Tracker=https://github.com/tornermarton/binance-data-collector/issues
    Source Code=https://github.com/tornermarton/binance-data-collector
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Environment :: Console
keywords =
    binance
    data
    collector


[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.9
packages = find:
setup_requires =
    wheel~=0.37.1
install_requires =
    Twisted~=22.10.0
    autobahn~=22.7.1
    pyopenssl~=22.1.0
    service_identity~=21.1.0
    ujson~=5.5.0
    click~=8.1.3
    requests~=2.28.1
    setuptools~=65.5.0
    schedule~=1.1.0


[options.packages.find]
include =
    binance_data_collector*


[options.entry_points]
console_scripts=
    binance_data_collector=binance_data_collector.__main__:main


[bdist_wheel]
universal = 1
python-tag=py3


[easy_install]